# RAG_comparison

./: .gitignore  README.md  ablation.py  config.py  docker-compose.yml  graph_predictions.json  graph_rag.py  main.py  pyproject.toml  run.py  semantic_predictions.json  semantic_rag.py
dataset/chromadb/: chroma.sqlite3
results/: evaluation_results.json  evaluation_results_text_cypher.json  evaluation_results_vanilla.json
src/: build_index.py  evaluation.py  graph_rag.py  semantic_rag.py  text_cypher_rag.py  vanilla_llm.py
src/data_processing/: build_corpus.py  build_kg.py  config.py  download.py  extract_kg.py  preprocess_data.py  statistic_plot.py
