[project]
name = "rag-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "langchain-chroma>=1.1.0",
    "langchain-neo4j>=0.9.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "matplotlib>=3.10.9",
    "neo4j>=6.1.0",
    "ragas>=0.2.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
]
